// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new user screen <UserForm /> renders as expected in saving state 1`] = `
<form
  className="iap-users-form"
  onSubmit={[Function]}
>
  <Field
    label="Username"
  >
    <Input
      Icon={null}
      errorMessage=""
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter username"
      type="text"
      value=""
    />
  </Field>
  <Field
    label="Password"
  >
    <Input
      Icon={null}
      errorMessage=""
      name="password"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter password"
      type="password"
      value=""
    />
  </Field>
  <Field
    label="Confirm Password"
  >
    <Input
      Icon={null}
      errorMessage=""
      name="confirmPassword"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter password once more"
      type="password"
      value=""
    />
  </Field>
  <footer
    className="iap-users-form__footer"
  >
    <Button
      Icon={[Function]}
      disabled={true}
      error={false}
      iconClassName=""
      onClick={null}
      stretch={false}
      transparent={false}
      type="submit"
    >
      Save User
    </Button>
    <Button
      Icon={null}
      disabled={true}
      error={false}
      iconClassName=""
      onClick={[MockFunction]}
      stretch={false}
      transparent={true}
      type="button"
    >
      Cancel
    </Button>
  </footer>
</form>
`;

exports[`new user screen <UserForm /> renders as expected with no error 1`] = `
<form
  className="iap-users-form"
  onSubmit={[Function]}
>
  <Field
    label="Username"
  >
    <Input
      Icon={null}
      errorMessage=""
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter username"
      type="text"
      value=""
    />
  </Field>
  <Field
    label="Password"
  >
    <Input
      Icon={null}
      errorMessage=""
      name="password"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter password"
      type="password"
      value=""
    />
  </Field>
  <Field
    label="Confirm Password"
  >
    <Input
      Icon={null}
      errorMessage=""
      name="confirmPassword"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter password once more"
      type="password"
      value=""
    />
  </Field>
  <footer
    className="iap-users-form__footer"
  >
    <Button
      Icon={[Function]}
      disabled={false}
      error={false}
      iconClassName=""
      onClick={null}
      stretch={false}
      transparent={false}
      type="submit"
    >
      Save User
    </Button>
    <Button
      Icon={null}
      disabled={false}
      error={false}
      iconClassName=""
      onClick={[MockFunction]}
      stretch={false}
      transparent={true}
      type="button"
    >
      Cancel
    </Button>
  </footer>
</form>
`;

exports[`new user screen <UserForm /> renders as expected with passed error 1`] = `
<form
  className="iap-users-form"
  onSubmit={[Function]}
>
  <FormErrorMessage
    error={[Error: error]}
  />
  <Field
    label="Username"
  >
    <Input
      Icon={null}
      errorMessage=""
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter username"
      type="text"
      value=""
    />
  </Field>
  <Field
    label="Password"
  >
    <Input
      Icon={null}
      errorMessage=""
      name="password"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter password"
      type="password"
      value=""
    />
  </Field>
  <Field
    label="Confirm Password"
  >
    <Input
      Icon={null}
      errorMessage=""
      name="confirmPassword"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter password once more"
      type="password"
      value=""
    />
  </Field>
  <footer
    className="iap-users-form__footer"
  >
    <Button
      Icon={[Function]}
      disabled={false}
      error={true}
      iconClassName=""
      onClick={null}
      stretch={false}
      transparent={false}
      type="submit"
    >
      Save User
    </Button>
    <Button
      Icon={null}
      disabled={false}
      error={false}
      iconClassName=""
      onClick={[MockFunction]}
      stretch={false}
      transparent={true}
      type="button"
    >
      Cancel
    </Button>
  </footer>
</form>
`;
